crates/vize_atelier_vapor/src/l3/tests/snapshots/vize_atelier_vapor__l3__tests__models__dynamic_component_model_payload.snap
---
source: crates/vize_atelier_vapor/src/s3/tests/models.rs
expression: code
---
import { createDynamicComponent as _createDynamicComponent } from 'vue';

export function render(_ctx) {
  const n0 = _createDynamicComponent(() => (_ctx.view), {
    modelValue: () => (_ctx.replacement),
    "onUpdate:modelValue": () => ($event => ((_ctx.replacement) = $event)),
    modelModifiers: () => ({ "trim": true })
  }, null, true)
  return n0
}
