crates/vize_atelier_vapor/src/l3/tests/snapshots/vize_atelier_vapor__l3__tests__models__model_callback_event_scope_prefix_false.snap
---
source: crates/vize_atelier_vapor/src/s3/tests/models.rs
expression: result.code
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback } from 'vue';

export function render(_ctx) {
  const _component_MyComp = _resolveComponent("MyComp")
  const n0 = _createComponentWithFallback(_component_MyComp, {
    modelValue: () => (_ctx.items[_ctx.$event]),
    "onUpdate:modelValue": () => ($event => ((_ctx.items[$event]) = $event))
  }, null, true)
  return n0
}
